# maahl.net-rust-aws-lambda

./: .gitignore  Cargo.toml  Dockerfile  readme.md
infra/: rust_lambda.tf
src/: main.rs
